# EBMC 5.9

* Verilog: fix for four-valued | and &
* Verilog: fix for typed parameter ports
* SystemVerilog: fix for type parameters
* SystemVerilog: type parameter ports
* SMV: word constants
* SMV: IVAR declarations
* SMV: bit selection operator

# EBMC 5.8

* AIG/netlist engine: fix for conversion of extract bits operator
* Verilog: semantic fix for output register ports
* SystemVerilog: cover sequence
* SystemVerilog: labeled immediate assert/assume/cover statements
* SystemVerilog: semantics fix for explicit casts

# EBMC 5.7

* Verilog: --initial-zero changes the default value from nondet to zero
* Verilog: `elsif preprocessor directive
* Verilog: fix for named generate blocks
* Verilog: $onehot and $onehot0 are now elaboration-time constant
* Verilog: $isunknown
* Verilog: fix for semantics of assignment contexts
* SystemVerilog: fix for #-# and #=# for empty matches
* SystemVerilog: fix for |-> and |=> for empty matches
* SystemVerilog: ref module port direction
* LTL/SVA to Buechi with --buechi
* SMV: abs, bool, count, max, min, toint, word1
* BMC: new encoding for F, avoiding spurious traces
* EBMC: verification results now have "result" verbosity level
* Soundness fix for combination of $past and k-induction

# EBMC 5.6

* SystemVerilog: [*] and [+] SVA operators
* SystemVerilog: typedefs from package scopes
* SystemVerilog: assignment patterns with keys for structs
* SystemVerilog: unbased unsigned literals '0, '1, 'x, 'z
* SystemVerilog: first_match
* SystemVerilog: [->n] and [=n]
* SystemVerilog: within
* SystemVerilog: bugfix for |-> and |=>
* SystemVerilog: bugfix for SVA sequence and
* SystemVerilog: strong/weak sequence semantics
* Verilog: 'dx, 'dz
* SMV: LTL V operator, xnor operator
* SMV: word types and operators
* --smv-word-level outputs the model as word-level SMV

# EBMC 5.5

* If no engine is given, EBMC now selects an engine heuristically, instead
  of doing BMC with k=1
* Verilog: bugfix for $onehot0