@@ -1,4 +1,4 @@
-KNOWNBUG
+CORE
 implicit_declaration1.sv
 
 ^EXIT=0$
@@ -6,4 +6,3 @@ implicit_declaration1.sv
 --
 ^warning: ignoring
 --
-This gives the wrong answer.
