@@ -5,7 +5,7 @@ module main;
   // implicit nets are allowed on the LHS of a continuous assignment
   assign O = A & B;
 
-  always assert final (O == (A & B));
-  always assert final ($bits(O) == 4);
+  always assert final (O == (A & B & 1'b1));
+  always assert final ($bits(O) == 1);
 
 endmodule
