@@ -2,6 +2,7 @@
 
 * Verilog: fix for four-valued | and &
 * Verilog: fix for typed parameter ports
+* Verilog: fix for the type of implicit nets for continous assignments
 * SystemVerilog: fix for type parameters
 * SystemVerilog: type parameter ports
 * SMV: word constants
